--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,8 @@
 page-home {
-
+    .toolbar-content{
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        pointer-events: none;
+     }
 }
