--- a/src/pages/welcome/welcome.scss
+++ b/src/pages/welcome/welcome.scss
@@ -1,3 +1,14 @@
 page-welcome {
+    .scroll-content{
+        justify-content: center;
+        display: flex!important;
+         align-items: center!important;
+    }
 
+    .toolbar-content{
+        position: absolute;
+        width: 100%;
+        text-align: center;
+        pointer-events: none;
+     }
 }
