add countdown timer to the app

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,4 +5,11 @@ page-home {
         text-align: center;
         pointer-events: none;
      }
+
+    .allTime{
+        color:black
+    } 
+    .lastMinute{
+        color: red
+    }
 }
