fix all the countdwon timer issues

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -10,6 +10,31 @@ page-home {
         color:black
     } 
     .lastMinute{
-        color: red
+        color: red;
+        -webkit-animation: flickerAnimation 1s infinite;
+         -moz-animation: flickerAnimation 1s infinite;
+         -o-animation: flickerAnimation 1s infinite;
+          animation: flickerAnimation 1s infinite;
     }
+    
+    @keyframes flickerAnimation {
+        0%   { opacity:1; }
+        50%  { opacity:0; }
+        100% { opacity:1; }
+      }
+      @-o-keyframes flickerAnimation{
+        0%   { opacity:1; }
+        50%  { opacity:0; }
+        100% { opacity:1; }
+      }
+      @-moz-keyframes flickerAnimation{
+        0%   { opacity:1; }
+        50%  { opacity:0; }
+        100% { opacity:1; }
+      }
+      @-webkit-keyframes flickerAnimation{
+        0%   { opacity:1; }
+        50%  { opacity:0; }
+        100% { opacity:1; }
+      }
 }
