--- a/src/pages/player/player.scss
+++ b/src/pages/player/player.scss
@@ -3,4 +3,45 @@ page-player {
         align-self: center;
         padding-right: 10%;
     }
+   
+        .toolbar-content{
+            position: absolute;
+            width: 100%;
+            text-align: center;
+            pointer-events: none;
+         }
+    
+        .allTime{
+            color:black
+        } 
+        .lastMinute{
+            color: red;
+            -webkit-animation: flickerAnimation 1s infinite;
+             -moz-animation: flickerAnimation 1s infinite;
+             -o-animation: flickerAnimation 1s infinite;
+              animation: flickerAnimation 1s infinite;
+        }
+        
+        @keyframes flickerAnimation {
+            0%   { opacity:1; }
+            50%  { opacity:0; }
+            100% { opacity:1; }
+          }
+          @-o-keyframes flickerAnimation{
+            0%   { opacity:1; }
+            50%  { opacity:0; }
+            100% { opacity:1; }
+          }
+          @-moz-keyframes flickerAnimation{
+            0%   { opacity:1; }
+            50%  { opacity:0; }
+            100% { opacity:1; }
+          }
+          @-webkit-keyframes flickerAnimation{
+            0%   { opacity:1; }
+            50%  { opacity:0; }
+            100% { opacity:1; }
+          }
+    
+    
 }
